--- a/blog.html
+++ b/blog.html
@@ -95,7 +95,7 @@
 												<div class="post__body">
 													<div class="post__meta"><span class="date">Oct 20 - 21, 2024 </span><span class="author"><a href="#">Leading With ZXL</a></span></div>
 													<h2 class="post__title"><a href="blog-detail.html">北京喇叭沟重装徒步</a></h2>
-													<p class="post__text">Duis porttitor libero ac egestas euismod. Maecenas quis felis turpis. Nulla quis turpis sed augue egestas dapibus vel at nibh. Nul</p>
+													<p class="post__text">Due to death threats, here I great thank for ZY</p>
 													<a class="md-btn md-btn--outline-primary" href="#">read more
 													</a>
 												</div>
