--- a/assets/fonts/pe-icon/fonts/mima1.html
+++ b/assets/fonts/pe-icon/fonts/mima1.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home</title>
+		<title>Mima1</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<!-- Fonts-->
-		<link rel="stylesheet" type="text/css" href="assets/fonts/fontawesome/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="assets/fonts/pe-icon/pe-icon.css">
+		<link rel="stylesheet" type="text/css" href="../../../../assets/fonts/fontawesome/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="../../../../assets/fonts/pe-icon/pe-icon.css">
 		<!-- Vendors-->
-		<link rel="stylesheet" type="text/css" href="assets/vendors/bootstrap/grid.css">
-		<link rel="stylesheet" type="text/css" href="assets/vendors/magnific-popup/magnific-popup.min.css">
-		<link rel="stylesheet" type="text/css" href="assets/vendors/swiper/swiper.css">
+		<link rel="stylesheet" type="text/css" href="../../../../assets/vendors/bootstrap/grid.css">
+		<link rel="stylesheet" type="text/css" href="../../../../assets/vendors/magnific-popup/magnific-popup.min.css">
+		<link rel="stylesheet" type="text/css" href="../../../../assets/vendors/swiper/swiper.css">
 		<!-- App & fonts-->
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:400,700">
-		<link rel="stylesheet" type="text/css" id="app-stylesheet" href="assets/css/main.css"><!--[if lt IE 9]>
+		<link rel="stylesheet" type="text/css" id="app-stylesheet" href="../../../../assets/css/main.css"><!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<![endif]-->
 		<style>
@@ -28,7 +28,7 @@
 		</style>
 		
 	</head>
-	<body background="	assets/img/BH_merger_simulation.png
+	<body background="	../../../../assets/img/BH_merger_simulation.png
 	" style=" background-repeat:no-repeat ;background-size:100% 100%;
 background-attachment: fixed;">
 		<div class="page-wrap" id="root">
@@ -36,7 +36,7 @@ background-attachment: fixed;">
 			<!-- header -->
 			<header class="header header--fixed">
 				<div class="header__inner">
-					<div class="header__logo"><a href="index.html"><img src="assets/img/logo.png" alt="" style="width: 122px;"/></a></div>
+					<div class="header__logo"><a href="../../../../index.html"><img src="../../../../assets/img/logo.png" alt="" style="width: 122px;"/></a></div>
 					<div class="navbar-toggle" id="fs-button">
 						<div class="navbar-icon"><span></span></div>
 					</div>
@@ -60,7 +60,8 @@ background-attachment: fixed;">
 							</li>
 							<li><a href="thinking.html">Thinking</a>
 							</li>
-
+							<li><a href="contact.html">Easter Egg</a>
+							</li>
 						</ul><!--  -->
 						
 					</nav><!-- End / overlay-menu -->
@@ -77,14 +78,14 @@ background-attachment: fixed;">
 					<div class="container">
 						<!-- page-title -->
 						<div class="page-title" style="color: white;">
-							<h2 class="page-title__title">这里是Indigo, 欢迎来到我的个人网站 : ) 
-								<br>Welcome to my personal web!
+							<h2 class="page-title__title">恭喜你找到了第一串密码！
+								<br>第一串密码是：“53”
 								<br>
 								<!-- typing__module -->
 								<div class="typing__module">
 									<div class="typed-strings">
 
-										<span>Click on the top right corner to view more</span>
+										<span>Try to find others!</span>
 									</div>
 									<span class="typed"></span>
 								</div><!-- End / typing__module -->
@@ -122,19 +123,19 @@ background-attachment: fixed;">
 			
 		</div>
 		<!-- Vendors-->
-		<script type="text/javascript" src="assets/vendors/jquery/jquery.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/imagesloaded/imagesloaded.pkgd.js"></script>
-		<script type="text/javascript" src="assets/vendors/isotope-layout/isotope.pkgd.js"></script>
-		<script type="text/javascript" src="assets/vendors/jquery-one-page/jquery.nav.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/jquery.easing/jquery.easing.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/jquery.matchHeight/jquery.matchHeight.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/masonry-layout/masonry.pkgd.js"></script>
-		<script type="text/javascript" src="assets/vendors/jquery.waypoints/jquery.waypoints.min.js"></script>
-		<script type="text/javascript" src="assets/vendors/swiper/swiper.jquery.js"></script>
-		<script type="text/javascript" src="assets/vendors/menu/menu.js"></script>
-		<script type="text/javascript" src="assets/vendors/typed/typed.min.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/jquery/jquery.min.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/imagesloaded/imagesloaded.pkgd.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/isotope-layout/isotope.pkgd.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/jquery-one-page/jquery.nav.min.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/jquery.easing/jquery.easing.min.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/jquery.matchHeight/jquery.matchHeight.min.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/masonry-layout/masonry.pkgd.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/jquery.waypoints/jquery.waypoints.min.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/swiper/swiper.jquery.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/menu/menu.js"></script>
+		<script type="text/javascript" src="../../../../assets/vendors/typed/typed.min.js"></script>
 		<!-- App-->
-		<script type="text/javascript" src="assets/js/main.js"></script>
+		<script type="text/javascript" src="../../../../assets/js/main.js"></script>
 	</body>
 </html>
